KAA-178: Implement gui form generator from avro schema. Change all log appenders to support unified interface